# pokemon-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_dmg.sh  pokemon.py  pokemon.spec  pyproject.toml
